fixed minor bugs

--- a/t/public3/index.html
+++ b/t/public3/index.html
@@ -5,5 +5,6 @@
     <a href="./index.html">foo</a>
     <a href="./index2.html">foo</a>
     <a href="./index3.html">bar</a>
+    <a href="./index4.html">bar</a>
 </body>
 </html>
